# nn

./: .clingy.yaml  .dockerignore  .gitignore  LICENSE  Makefile  mkdocs.yaml  pyproject.toml  readme.md  setup.cfg
.github/: dependabot.yml
.github/workflows/: docs.yaml  lint.yaml  pex.yaml  test.yaml
docs/: index.md
nn/: cli.py  client.py  constants.py  models.py  util.py
nn/articles/: client.py  models.py  service.py  view.py
nn/sources/: models.py  service.py  view.py
nn/stubs/: click_default_group.pyi
tests/: test_render.py
