[metadata]
name = nn
version = 0.0.1
description = NN cli.
long_description = file: readme.md

[options]
packages = find:
install_requires =
    click_default_group
    dataclasses_json
    httpx
    rich_click

[options.extras_require]
test =
    black
    build
    isort
    pex
    pytest

[options.entry_points]
console_scripts =
    nn = nn.cli:cli