[metadata]
name = nn
version = 0.0.1
description = NN cli.
long_description = file: readme.md

[options]
packages = find:
install_requires =
    dataclasses_json
    httpx
    rich_click

[options.extras_require]
test =
    black
    build
    Faker
    isort
    mypy
    pex
    pytest
    pytest-asyncio
    pytest-cov
    pytest_httpx

[options.entry_points]
console_scripts =
    nn = nn.cli:cli